# volume-control

./: .clang-format  .gitignore  CMakeLists.txt
cli/src/: main.cpp
cmake/: build.cmake  config.cmake
cpp/: CMakeLists.txt  build.bat
cpp/cli/src/: main.cpp
cpp/lib/interface/: idevice.hpp  isession.hpp  ivolume.hpp
cpp/lib/win/include/: device.hpp  helper.hpp  session.hpp  volume.hpp
cpp/lib/win/src/: device.cpp  helper.cpp  session.cpp  volume.cpp
include/: device.hpp  helper.hpp  mainWindow.hpp  session.hpp  volume.hpp
js/: package-lock.json  package.json
js/addon/: package.json
js/server/: index.mjs  package.json
js/server/src/: handler.mjs  helper.mjs  index.mjs  server.mjs  volumeControl.mjs
js/server/static/: index.css  index.html  index.js
js/volume-control/: CMakeLists.txt  index.d.ts  index.js  package.json
js/volume-control/src/: main.cpp
lib/interface/: idevice.hpp  isession.hpp
lib/win/include/: device.hpp  helper.hpp  mainWindow.hpp
lib/win/src/: device.cpp  helper.cpp  session.cpp
src/: device.cpp  helper.cpp  main.cpp  session.cpp  volume.cpp
